sumo/tests/duarouter/errors/false_input_trips/errors.duarouter
Error: File 'xxx.xml' is not accessible.
Quitting (on error).
